--- a/trunk/src/WaveLib.Tests/WaveLib.Tests.csproj
+++ b/trunk/src/WaveLib.Tests/WaveLib.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{A182FEB7-2FB2-448F-A62C-751F73B8E63B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WaveLib.Tests</RootNamespace>
-    <AssemblyName>WaveLib.Tests</AssemblyName>
+    <RootNamespace>WaveletStudio.WaveLib.Tests</RootNamespace>
+    <AssemblyName>WaveletStudio.WaveLib.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ILNumerics.Net">
-      <HintPath>..\..\res\libs\ILNumerics\ILNumerics.Net.dll</HintPath>
+    <Reference Include="ILNumerics">
+      <HintPath>..\..\res\libs\ILNumerics\ILNumerics.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalExtensionTests.cs" />
     <Compile Include="SignalTests.cs" />
+    <Compile Include="WaveLibMathTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WaveLib\WaveLib.csproj">
