--- a/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
+++ b/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
@@ -48,10 +48,14 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommonMotherWaveletsTests.cs" />
-    <Compile Include="DecompositionLevelTests.cs" />
-    <Compile Include="DwtTests.cs" />
-    <Compile Include="MotherWaveletTests.cs" />
+    <Compile Include="SignalGeneration\SawtoothTest.cs" />
+    <Compile Include="SignalGeneration\SineTest.cs" />
+    <Compile Include="SignalGeneration\SquareTest.cs" />
+    <Compile Include="SignalGeneration\TriangleTest.cs" />
+    <Compile Include="Wavelet\CommonMotherWaveletsTests.cs" />
+    <Compile Include="Wavelet\DecompositionLevelTests.cs" />
+    <Compile Include="Wavelet\DwtTests.cs" />
+    <Compile Include="Wavelet\MotherWaveletTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalExtensionTests.cs" />
     <Compile Include="SignalTests.cs" />
