--- a/trunk/src/WaveletStudio/WaveletStudio.csproj
+++ b/trunk/src/WaveletStudio/WaveletStudio.csproj
@@ -46,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProcessingSteps\GenerateSignalStep.cs" />
+    <Compile Include="ProcessingSteps\ProcessingStepBase.cs" />
+    <Compile Include="ProcessingSteps\ProcessingStepList.cs" />
+    <Compile Include="ProcessingSteps\ScalarStep.cs" />
     <Compile Include="Wavelet\CommonMotherWavelets.cs" />
     <Compile Include="Wavelet\DecompositionLevel.cs" />
     <Compile Include="SignalGeneration\CommonSignalBase.cs" />
