--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -71,6 +71,12 @@
     <Compile Include="Controls\WizardPage.Designer.cs">
       <DependentUpon>WizardPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SignalOperationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SignalOperationForm.Designer.cs">
+      <DependentUpon>SignalOperationForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +99,9 @@
     <EmbeddedResource Include="Controls\WizardPage.resx">
       <DependentUpon>WizardPage.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SignalOperationForm.resx">
+      <DependentUpon>SignalOperationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -135,9 +144,6 @@
     <None Include="Resources\signals_commonsignals_sine.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\signals.commonsignals.sine.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\signals_commonsignals_triangle.png" />
   </ItemGroup>
   <ItemGroup>
@@ -145,6 +151,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\signals_commonsignals_sawtooth.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\operation_scalar.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
