--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationUtils.cs" />
     <Compile Include="Attributes\DisplayAttribute.cs" />
     <Compile Include="Controls\QControlUtils.cs" />
     <Compile Include="Controls\WizardControl.cs">
@@ -91,7 +92,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="Controls\WizardControl.resx">
       <DependentUpon>WizardControl.cs</DependentUpon>
       <SubType>Designer</SubType>
