--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -72,11 +72,11 @@
     <Compile Include="Controls\WizardPage.Designer.cs">
       <DependentUpon>WizardPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SignalOperationForm.cs">
+    <Compile Include="Forms\BlockSetupForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\SignalOperationForm.Designer.cs">
-      <DependentUpon>SignalOperationForm.cs</DependentUpon>
+    <Compile Include="Forms\BlockSetupForm.Designer.cs">
+      <DependentUpon>BlockSetupForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
@@ -94,8 +94,8 @@
       <DependentUpon>WizardPage.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SignalOperationForm.resx">
-      <DependentUpon>SignalOperationForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\BlockSetupForm.resx">
+      <DependentUpon>BlockSetupForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -128,9 +128,7 @@
       <Name>WaveletStudio</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Signal\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\signals_commonsignals_sine.png" />
   </ItemGroup>
