--- a/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
+++ b/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ILNumerics.Net">
-      <HintPath>..\..\..\res\libs\ILNumerics\ILNumerics.Net.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -53,6 +49,7 @@
     <Compile Include="Blocks\ConvolveBlockTest.cs" />
     <Compile Include="Blocks\ScalarOperationBlockTest.cs" />
     <Compile Include="Blocks\GenerateSignalBlockTest.cs" />
+    <Compile Include="FFT\ManagedFFTTests.cs" />
     <Compile Include="SignalGeneration\BinaryTest.cs" />
     <Compile Include="SignalGeneration\SawtoothTest.cs" />
     <Compile Include="SignalGeneration\SineTest.cs" />
@@ -66,7 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalExtensionTests.cs" />
     <Compile Include="SignalTests.cs" />
-    <Compile Include="WaveMathTests.cs" />
+    <Compile Include="Functions\WaveMathTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WaveletStudio\WaveletStudio.csproj">
@@ -74,9 +71,7 @@
       <Name>WaveletStudio</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Blocks\CustomAttributes\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
