--- a/trunk/src/WaveletStudio/WaveletStudio.csproj
+++ b/trunk/src/WaveletStudio/WaveletStudio.csproj
@@ -36,16 +36,8 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ILNumerics.Net">
-      <HintPath>..\..\res\libs\ILNumerics\ILNumerics.Net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Blocks\BlockNodeBase.cs" />
@@ -59,6 +51,9 @@
     <Compile Include="Blocks\BlockList.cs" />
     <Compile Include="Blocks\BlockInputNode.cs" />
     <Compile Include="Blocks\ScalarOperationBlock.cs" />
+    <Compile Include="FFT\ManagedFft.cs" />
+    <Compile Include="Functions\WaveMath_Operations.cs" />
+    <Compile Include="MemoryPool.cs" />
     <Compile Include="SignalGeneration\Binary.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Wavelet\CommonMotherWavelets.cs" />
@@ -68,21 +63,14 @@
     <Compile Include="SignalGeneration\Sine.cs" />
     <Compile Include="SignalGeneration\Square.cs" />
     <Compile Include="SignalGeneration\Triangle.cs" />
-    <Compile Include="WaveMath.cs" />
+    <Compile Include="Functions\WaveMath_General.cs" />
     <Compile Include="Signal.cs" />
     <Compile Include="Wavelet\MotherWavelet.cs" />
     <Compile Include="Wavelet\Dwt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalExtension.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="libfftw3-3.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="libfftw3f-3.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
