--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -136,6 +136,9 @@
   <ItemGroup>
     <None Include="Resources\scalarimg.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\signals_commonsignals_cosine.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
