--- a/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
+++ b/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
@@ -45,8 +45,12 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blocks\BlockListTest.cs" />
     <Compile Include="Blocks\BlocksConnectionTest.cs" />
-    <Compile Include="Blocks\ConvolveBlockTest.cs" />
+    <Compile Include="Blocks\ConvolutionBlockTest.cs" />
+    <Compile Include="Blocks\FFTBlockTest.cs" />
+    <Compile Include="Blocks\DownSampleBlockTest.cs" />
+    <Compile Include="Blocks\NodesTest.cs" />
     <Compile Include="Blocks\ScalarOperationBlockTest.cs" />
     <Compile Include="Blocks\GenerateSignalBlockTest.cs" />
     <Compile Include="FFT\ManagedFFTTests.cs" />
