--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -145,6 +145,12 @@
   <ItemGroup>
     <None Include="Resources\imgfftmini.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imgifftmini.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imgifft.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
