--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -184,6 +184,9 @@
   <ItemGroup>
     <None Include="Resources\imgscalarsummini.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\csv.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
