--- a/trunk/src/WaveletStudio.MainApplication/app.config
+++ b/trunk/src/WaveletStudio.MainApplication/app.config
@@ -1,3 +1,21 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="WaveletStudio.MainApplication.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
+        <WaveletStudio.MainApplication.Properties.Settings>
+            <setting name="AutoLoadLastFile" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="RecentFileList" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AutoShowBlockSetupForm" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </WaveletStudio.MainApplication.Properties.Settings>
+    </applicationSettings>
+</configuration>
