--- a/labs/DiagramControl/Diagram.NET.csproj
+++ b/labs/DiagramControl/Diagram.NET.csproj
@@ -91,6 +91,9 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CustomXmlSerializer">
+      <HintPath>..\..\trunk\res\libs\CustomXmlSerializer\CustomXmlSerializer.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
