--- a/trunk/src/WaveletStudio/WaveletStudio.csproj
+++ b/trunk/src/WaveletStudio/WaveletStudio.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Blocks\BlockNodeBase.cs" />
     <Compile Include="Blocks\BlockOutputNode.cs" />
     <Compile Include="Blocks\ConvolutionBlock.cs" />
+    <Compile Include="Blocks\ImportFromTextBlock.cs" />
     <Compile Include="Blocks\ExportToCSVBlock.cs" />
     <Compile Include="Blocks\SignalExtensionBlock.cs" />
     <Compile Include="Blocks\WaveletBlock.cs" />
